Botão inscrição na seção principal

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     </header>
 
     <main>
-        <section id="principal" class="hidde">
+        <section id="principal">
             <div class="conteudo-principal">
                 <h1 class="titulo-parte-principal" style="font-size: 2.5rem; margin-top: 15px;">Copa Unaí</h1>
                 <p class="texto-parte-principal" style="margin-bottom: 5px;">Os melhores campeonatos são aqui</p>
                 <p>3ª edição do futsal 2024</p>
-                <p>Ginásio Poliesportivo.</p>
+                <p>Ginásio Poliesportivo</p>
                 <p>-------, ------, ---- Unaí - MG.</p>
                 <h2 class="titulo-parte-principal ">Começa em:</h2>
                 <div id="cowntdown-container">
@@ -61,6 +61,9 @@
                         <span>Segundos</span>
                     </div>
                 </div>
+                <div class="div-principal">
+                    <a href="#">Faça sua inscrição</a>
+                </div>
             </div>        
         </section>
         <section id="sobre">
@@ -69,9 +72,11 @@
                 <h3>ESTOU SEM IDEIAS PRA SEÇÃO DE BAIXO TAMBEM</h3>
             </div>
             <p class="hidden">Bola um textinho pra colocar aqui apresentando a copa unaí falando um pouquinho sobre vocês. E bola também um titulo pra colocar no primeiro titulo e um no segundo também.</p>
+            <p class="hidden">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam facere incidunt ipsum blanditiis deserunt molestiae, delectus omnis quo tenetur aperiam voluptate quas velit ullam beatae ipsa vel cupiditate quod illum.</p>
         </section>
         </div>
         <section id="eventos-anteriores" class="hidden">
+            <h1>Últimas Edições</h1>
             <div class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide"><img src="images/eventos-anteriores/futsal-um-pequeno.png" alt="Banner Copa Unaí de Futsal"></div>
