--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p class="hidden">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam facere incidunt ipsum blanditiis deserunt molestiae, delectus omnis quo tenetur aperiam voluptate quas velit ullam beatae ipsa vel cupiditate quod illum.</p>
         </section>
         </div>
-        <section id="eventos-anteriores" class="hidden">
+        <section id="eventos-anteriores">
             <h1>Últimas Edições</h1>
             <div class="swiper">
                 <div class="swiper-wrapper">
