--- a/teste.html
+++ b/teste.html
@@ -1,50 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-    body {
-      height: auto; /* Ajuste a altura da página automaticamente */
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Se tiver um arquivo CSS separado -->
+    <title>Slider com Swiper</title>
+    <style>
+      .swiper-container {
+          width: 100%;
+          height: 400px; /* Altura desejada do slider */
+          margin: 0 auto;
+      }
+      .swiper-slide {
+          text-align: center;
+          font-size: 18px;
+          background: #fff;
+          /* Outros estilos para os slides */
+      }
 
-    .container {
-      display: flex;
-      height: 30vh; /* O container ocupa 50% da altura da tela */
-      overflow: hidden;
-    }
+      .swiper-slide img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover; /* Para ajustar o tamanho da imagem */
+      }
 
-    .imagem-esquerda, .imagem-direita {
-      flex: 0.5;
-    }
+      .swiper-button-next, .swiper-button-prev {
+          color: #fff;
+          font-size: 18px;
+          background: #000;
+          border-radius: 50%;
+          width: 40px;
+          height: 40px;
+          margin-top: -20px;
+          z-index: 10;
+      }
 
-    .imagem-esquerda img, .imagem-direita img {
-      height: 100%;
-      width: auto;
-    }
-  </style>
+      .swiper-button-next {
+          right: 10px;
+      }
+
+      .swiper-button-prev {
+          left: 10px;
+      }
+
+      .swiper-pagination {
+          position: absolute;
+          bottom: 10px;
+          text-align: center;
+          width: 100%;
+          z-index: 10;
+      }
+
+      .swiper-pagination-bullet {
+          width: 10px;
+          height: 10px;
+          display: inline-block;
+          background: #ccc;
+          opacity: 0.5;
+          border-radius: 10px;
+          margin: 0 5px;
+          cursor: pointer;
+      }
+
+      .swiper-pagination-bullet-active {
+          background: #000;
+          opacity: 1;
+      }
+
+    </style>
 </head>
 <body>
-  <div class="container">
-    <div class="imagem-esquerda">
-      <img src="images/bola-de-futebol.png" alt="Descrição da imagem esquerda">
-    </div>
-    <div class="imagem-direita">
-      <img src="images/bola-de-volei.png" alt="Descrição da imagem direita">
-    </div>
-  </div>
 
-  <script>
-    const container = document.querySelector('.container');
-    const imagemEsquerda = document.querySelector('.imagem-esquerda');
-    const imagemDireita = document.querySelector('.imagem-direita');
+<div class="swiper-container">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="slide1.jpg" alt="Slide 1"></div>
+        <div class="swiper-slide"><img src="slide2.jpg" alt="Slide 2"></div>
+        <div class="swiper-slide"><img src="slide3.jpg" alt="Slide 3"></div>
+    </div>
+    <!-- Adicionando botões de navegação -->
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <!-- Adicionando a pagination -->
+    <div class="swiper-pagination"></div>
+</div>
 
-    window.addEventListener('scroll', function() {
-      const scrollTop = window.pageYOffset;
-      imagemEsquerda.style.top = `${scrollTop * 0.3}px`; /* Velocidade da imagem esquerda (0.3 para animação mais lenta) */
-      imagemDireita.style.bottom = `${scrollTop * 0.3}px`; /* Velocidade da imagem direita (0.3 para animação mais lenta) */
-    });
-  </script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script>
+  const swiper = new Swiper('.swiper-container', {
+    loop: true, // Habilita o loop do slider
+    autoplay: {
+        delay: 5000, // Tempo em milissegundos entre os slides
+        disableOnInteraction: false, // Permite pausar o autoplay quando o usuário interage
+    },
+    navigation: {
+        nextEl: '.swiper-button-next', // Botão próximo
+        prevEl: '.swiper-button-prev', // Botão anterior
+    },
+    pagination: {
+        el: '.swiper-pagination', // Paginação
+        clickable: true, // Permite clicar na paginação para navegar aos slides
+    },
+});
+
+</script> <!-- Se tiver um arquivo JS separado -->
 </body>
 </html>
