Formulário de inscriçao

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Principal</a></li>
                     <li><a href="#sobre" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Sobre</a></li>
                     <li><a href="#eventos-anteriores" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Ultimas Edições</a></li>
-                    <li style="margin: 20px 0px 15px 13px;"><a href="#inscricao" class="botao-inscricao botao-menu" onclick="Toggle('.menu-links', 'abriu')" target="_blank">Inscrição<span class="material-symbols-outlined" style="font-size: 1.2rem; margin: auto 0px auto 10px; ">
+                    <li style="margin: 20px 0px 15px 13px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeK9k6Kd_796bbxDuBm3ZzRoeRzbykyVXE2akOJJjxd16uLOA/viewform" class="botao-inscricao botao-menu" onclick="Toggle('.menu-links', 'abriu')" target="_blank" rel="noopener noreferrer">Inscrição<span class="material-symbols-outlined" style="font-size: 1.2rem; margin: auto 0px auto 10px; ">
                         north_east
                         </span></a></li>
                 </ul>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="div-principal">
-                    <a href="#">Faça sua inscrição</a>
+                    <a href="https://forms.gle/DBZgRfVirr29T4AD8" target="_blank" rel="noopener noreferrer">Faça sua inscrição</a>
                 </div>
             </div>        
         </section>
