--- a/teste.html
+++ b/teste.html
@@ -7,66 +7,72 @@
     <link rel="stylesheet" href="styles.css"> <!-- Se tiver um arquivo CSS separado -->
     <title>Slider com Swiper</title>
     <style>
+      *{
+        width: 100vw;
+        overflow-x: hidden;
+
+      }
       .swiper-container {
-          width: 100%;
-          height: 400px; /* Altura desejada do slider */
-          margin: 0 auto;
-      }
-      .swiper-slide {
-          text-align: center;
-          font-size: 18px;
-          background: #fff;
-          /* Outros estilos para os slides */
-      }
+    width: 100%;
+    height: 400px; /* Altura desejada do slider */
+    margin: 0 auto;
+}
 
-      .swiper-slide img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover; /* Para ajustar o tamanho da imagem */
-      }
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    /* Outros estilos para os slides */
+}
 
-      .swiper-button-next, .swiper-button-prev {
-          color: #fff;
-          font-size: 18px;
-          background: #000;
-          border-radius: 50%;
-          width: 40px;
-          height: 40px;
-          margin-top: -20px;
-          z-index: 10;
-      }
+.swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Para ajustar o tamanho da imagem */
+}
 
-      .swiper-button-next {
-          right: 10px;
-      }
+.swiper-button-next, .swiper-button-prev {
+    color: #fff;
+    font-size: 18px;
+    background: #000;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-top: -20px;
+    z-index: 10;
+}
 
-      .swiper-button-prev {
-          left: 10px;
-      }
+.swiper-button-next {
+    right: 10px;
+}
 
-      .swiper-pagination {
-          position: absolute;
-          bottom: 10px;
-          text-align: center;
-          width: 100%;
-          z-index: 10;
-      }
+.swiper-button-prev {
+    left: 10px;
+}
 
-      .swiper-pagination-bullet {
-          width: 10px;
-          height: 10px;
-          display: inline-block;
-          background: #ccc;
-          opacity: 0.5;
-          border-radius: 10px;
-          margin: 0 5px;
-          cursor: pointer;
-      }
+.swiper-pagination {
+    position: absolute;
+    bottom: 10px;
+    text-align: center;
+    width: 100%;
+    z-index: 10;
+}
 
-      .swiper-pagination-bullet-active {
-          background: #000;
-          opacity: 1;
-      }
+.swiper-pagination-bullet {
+    width: 10px;
+    height: 10px;
+    display: inline-block;
+    background: #ccc;
+    opacity: 0.5;
+    border-radius: 10px;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.swiper-pagination-bullet-active {
+    background: #000;
+    opacity: 1;
+}
 
     </style>
 </head>
