Correções e texto da seção sobre

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <ul class="lista">
                     <li><a href="#" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Principal</a></li>
                     <li><a href="#sobre" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Sobre</a></li>
+                    <li><a href="#contato" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Contato</a></li>
                     <li><a href="#eventos-anteriores" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Ultimas Edições</a></li>
                     <li style="margin: 20px 0px 15px 13px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeK9k6Kd_796bbxDuBm3ZzRoeRzbykyVXE2akOJJjxd16uLOA/viewform" class="botao-inscricao botao-menu" onclick="Toggle('.menu-links', 'abriu')" target="_blank" rel="noopener noreferrer">Inscrição<span class="material-symbols-outlined" style="font-size: 1.2rem; margin: auto 0px auto 10px; ">
                         north_east
@@ -71,10 +72,13 @@
                 <h2>ME AJUDA WEZEY, ESTOU SEM IDEIAS PRA FAZER ESSA SEÇÃO</h2>
                 <h3>ESTOU SEM IDEIAS PRA SEÇÃO DE BAIXO TAMBEM</h3>
             </div>
-            <p class="hidden">Bola um textinho pra colocar aqui apresentando a copa unaí falando um pouquinho sobre vocês. E bola também um titulo pra colocar no primeiro titulo e um no segundo também.</p>
-            <p class="hidden">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam facere incidunt ipsum blanditiis deserunt molestiae, delectus omnis quo tenetur aperiam voluptate quas velit ullam beatae ipsa vel cupiditate quod illum.</p>
+            <p class="hidden">Arthur Cecílio e Wesley Rodrigues são os dedicados organizadores da Copa Unaí, um evento esportivo de destaque que ocorre ao longo de todo o ano. Com uma visão clara e uma paixão inabalável pelo esporte, Arthur e Wesley têm se destacado por sua capacidade de reunir talentos e promover uma competição de alto nível.</p>
+            <p class="hidden">Arthur Cecílio, com sua vasta experiência em gestão esportiva, traz uma abordagem estratégica para a organização do evento. Sua habilidade em coordenar equipes e planejar cada detalhe assegura que a Copa Unaí mantenha seu padrão de excelência, proporcionando uma experiência inesquecível para atletas e espectadores. Arthur é conhecido por sua liderança, organização impecável e capacidade de resolver problemas com eficiência.</p>
+            <p class="hidden">
+            Wesley Rodrigues, por sua vez, complementa a equipe com sua expertise em desenvolvimento de talentos e sua habilidade em criar um ambiente de competição saudável e inspirador. Responsável pelo marketing, design e toda a parte técnica do evento, Wesley garante que a Copa Unaí se destaque não apenas pela qualidade das disputas, mas também pela sua comunicação visual e promoção. Sua criatividade, atenção aos detalhes e habilidades técnicas são fundamentais para o sucesso contínuo do evento.</p>
+            <p class="hidden">
+            Juntos, Arthur Cecílio e Wesley Rodrigues não apenas organizam uma competição esportiva, mas também fomentam uma cultura de excelência e desenvolvimento pessoal entre os participantes, consolidando a Copa Unaí como o principal evento esportivo da cidade.</p>
         </section>
-        </div>
         <section id="eventos-anteriores">
             <h1>Últimas Edições</h1>
             <div class="swiper">
@@ -91,16 +95,18 @@
                 <div class="swiper-pagination"></div>
             </div>
         </section>
+        <section id="contato">
+            <div>
+                <a href="#" target="_blank" rel="noopener noreferrer">
+                    <img src="images/icone-whatsapp.png" alt="Icone do whatsapp">
+                </a>
+                <a href="https://www.instagram.com/copaunai?igsh=MW5yczF6emQ1NzhjYw==" target="_blank" rel="noopener noreferrer">
+                    <img src="images/icone-instagram.png" alt="Icone do instagram">
+                </a>
+            </div>
+        </section>
     </main>
     <footer>
-        <div>
-            <a href="#" target="_blank" rel="noopener noreferrer">
-                <img src="images/icone-whatsapp.png" alt="Icone do whatsapp">
-            </a>
-            <a href="https://www.instagram.com/copaunai?igsh=MW5yczF6emQ1NzhjYw==" target="_blank" rel="noopener noreferrer">
-                <img src="images/icone-instagram.png" alt="Icone do instagram">
-            </a>
-        </div>
         <p>Todos os direitos reservados © Copa Unaí 2024.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
